Prepare for release
Bump versions and prepare for release.

Fix broken JavaDocs.